tests/fixtures/type_err/duplicate_field.reconf
type Config = {
  port : Int,
};

let config = {
  port = 8080,
  port = 9090,
} : Config;

config
